<resources>
    <string name="my_tasks">My tasks</string>
    <string name="add_task">Add task</string>
    <string name="edit_task">Edit task</string>
    <string name="enter_text">Enter text…</string>
    <string name="status">Status</string>
    <string name="deadline">Deadline</string>
    <string name="created">Created</string>
    <string name="modified">Modified</string>
    <string name="task_is_done">task is done</string>
    <string name="priority">Priority</string>
    <string name="delete">Delete</string>
    <string name="save">Save</string>
    <string name="not_defined">Not defined</string>
    <string name="sort_tasks">Sort tasks</string>
    <string name="hide_done_tasks">Hide done tasks</string>
    <string name="login">Login</string>
    <string name="done">Done - %d</string>
    <string name="username">Username…</string>
    <string name="token">Token…</string>
    <string name="theme">Theme</string>
    <string name="server">Server synchronization enabled</string>
    <string name="default_mode">Default</string>
    <string name="theme_options">Theme options</string>
    <string name="network_options">Network options</string>
    <string name="time">Time</string>
    <string name="date">Date</string>
    <string name="low">Low</string>
    <string name="basic">Basic</string>
    <string name="high">High</string>
    <string name="select">Select</string>
    <string name="submit">Submit</string>
    <string name="postpone">Postpone for day</string>
    <string name="task">Task</string>
    <string name="undo">Undo</string>
    <string name="deleted">deleted</string>
    <string name="notification_options">Notification options</string>
    <string name="notification_enabled">Notification enabled</string>
</resources>