<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/surfaceColor"
    tools:context=".android.fragment.ItemEditFragment">

    <include
        android:id="@+id/status"
        layout="@layout/layout_task_status_setup_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <include
        android:id="@+id/priority"
        layout="@layout/layout_task_priority_setup_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/status" />

    <LinearLayout
        android:id="@+id/task_date_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/shape_rounded_corners"
        android:backgroundTint="?attr/containerColor"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:padding="10dp"
        android:weightSum="10"
        app:layout_constraintBottom_toTopOf="@+id/task_content_textview"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/priority">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:drawablePadding="10dp"
                android:gravity="start|center_vertical"
                android:text="@string/created"
                android:textColor="?attr/textSecondaryColor"
                android:textSize="16sp"
                android:textStyle="bold"
                app:drawableStartCompat="@drawable/baseline_calendar_month_24"
                app:drawableTint="?attr/interactionColor" />

            <TextView
                android:id="@+id/task_creation_time_textview"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="6"
                android:ellipsize="end"
                android:gravity="center"
                android:maxLines="1"
                android:textColor="?attr/textPrimaryColor"
                android:textSize="16sp"
                android:textStyle="bold" />
        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:drawablePadding="10dp"
                android:gravity="start|center_vertical"
                android:text="@string/modified"
                android:textColor="?attr/textSecondaryColor"
                android:textSize="16sp"
                android:textStyle="bold"
                app:drawableStartCompat="@drawable/baseline_calendar_month_24"
                app:drawableTint="?attr/interactionColor" />

            <TextView
                android:id="@+id/task_modifying_time_textview"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="6"
                android:ellipsize="end"
                android:gravity="center"
                android:maxLines="1"
                android:textColor="?attr/textPrimaryColor"
                android:textSize="16sp"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>

    <EditText
        android:id="@+id/task_content_textview"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:autofillHints=""
        android:background="@drawable/selector_responsive_edit_text"
        android:gravity="start"
        android:hint="@string/enter_text"
        android:inputType="textMultiLine"
        android:minLines="1"
        android:padding="15dp"
        android:textColor="?attr/textPrimaryColor"
        android:textColorHint="?attr/textSecondaryColor"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@id/deadline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/task_date_view" />

    <include
        android:id="@+id/deadline"
        layout="@layout/layout_task_deadline_setup_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toTopOf="@id/task_delete_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/task_content_textview" />


    <Button
        android:id="@+id/task_delete_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:backgroundTint="?attr/failureColor"
        android:text="@string/delete"
        android:textColor="?attr/absWhite"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/task_save_button"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/task_save_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:backgroundTint="?attr/successColor"
        android:text="@string/save"
        android:textColor="?attr/absWhite"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/task_delete_button" />
</androidx.constraintlayout.widget.ConstraintLayout>
