<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorPrimary"
    tools:context=".presentation.fragment.TaskListFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:background="?attr/colorPrimary"
        android:fitsSystemWindows="true"
        app:layout_scrollFlags="scroll|exitUntilCollapsed">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <androidx.appcompat.widget.Toolbar
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_gravity="top"
                android:background="?attr/colorPrimary"
                app:contentInsetStart="0dp"
                app:layout_collapseMode="pin">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingHorizontal="10dp">

                    <androidx.appcompat.widget.AppCompatImageButton
                        android:layout_width="48dp"
                        android:layout_height="0dp"
                        android:layout_marginStart="8dp"
                        android:background="@android:color/transparent"
                        android:contentDescription="@string/login"
                        android:foreground="?android:attr/selectableItemBackground"
                        android:src="@drawable/icon_account"
                        android:tint="?attr/gray"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.appcompat.widget.Toolbar>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|start"
                app:layout_collapseMode="parallax">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="64dp"
                    android:text="@string/your_tasks"
                    android:textAppearance="@style/LargeTitle"
                    android:textColor="?attr/colorOnPrimary"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/your_tasks"
                    android:textAppearance="@style/Subhead"
                    android:textColor="?attr/colorOnTertiary"
                    app:layout_constraintEnd_toEndOf="@id/textview"
                    app:layout_constraintStart_toStartOf="@id/textview"
                    app:layout_constraintTop_toBottomOf="@id/textview" />


            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="wrap_content"
                android:layout_height="56dp"
                android:layout_gravity="bottom|end"
                android:paddingHorizontal="10dp"
                app:layout_collapseMode="pin">

                <androidx.appcompat.widget.AppCompatImageButton
                    android:id="@+id/order_collapsed_button"
                    android:layout_width="48dp"
                    android:layout_height="0dp"
                    android:layout_marginEnd="24dp"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/sort_tasks"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:src="@drawable/icon_update"
                    android:tint="?attr/gray"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/visibility_collapsed_button"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.appcompat.widget.AppCompatImageButton
                    android:id="@+id/visibility_collapsed_button"
                    android:layout_width="48dp"
                    android:layout_height="0dp"
                    android:layout_marginEnd="8dp"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/hide_done_tasks"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:src="@drawable/icon_visibility_on"
                    android:tint="?attr/blue"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="8dp"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:backgroundTint="?attr/blue"
        android:clickable="true"
        android:contentDescription="@string/add_task"
        android:foregroundGravity="center"
        android:scaleType="center"
        app:fabSize="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/icon_add"
        app:tint="?attr/white" />
</androidx.coordinatorlayout.widget.CoordinatorLayout>



